[tool.poetry]
name = "red-nucleus-experimental"
version = "0.1.0"
description = ""
authors = ["fisseha-estifanos <fisseha.137@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
langchain = "^0.2.13"
qdrant-client = "^1.11.0"
python-dotenv = "^1.0.1"
langchain-qdrant = "^0.1.3"
langchain-openai = "^0.1.21"
langchain-community = "^0.2.12"
langchain-postgres = "^0.0.9"
langchain-anthropic = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
